--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         run: npm ci
-      - name: Run tests
-        run: npm test
       - name: Check types
         run: npm run check
+      - name: Run linting
+        run: npm run lint
+      - name: Run tests
+        run: npm test
