--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "build": "tsc",
     "check": "tsc --noEmit --pretty",
-    "test": "jest",
-    "testinit": "ts-jest config:init",
-    "tsinit": "tsc --init"
+    "lint": "eslint src/*.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,6 +21,9 @@
   "homepage": "https://github.com/sgohlke/crazy-dicey#readme",
   "devDependencies": {
     "@types/jest": "^29.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "eslint": "^8.24.0",
     "ts-jest": "^29.0.2",
     "typescript": "^4.8.4"
   }
