--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,5 +19,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "@typescript-eslint/explicit-function-return-type": "error",
+        "semi": ["error", "never"]
     }
 }
