--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "check": "tsc --noEmit --pretty",
     "lint": "eslint src/*.ts",
+    "lintfix": "eslint src/*.ts --fix",
     "test": "jest"
   },
   "repository": {
