--- a/package.json
+++ b/package.json
@@ -20,11 +20,6 @@
   },
   "homepage": "https://github.com/sgohlke/crazy-dicey#readme",
   "devDependencies": {
-    "@types/jest": "^29.2.5",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "eslint": "^8.31.0",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.4"
+    "@sgohlke/ts-base-dependencies": "1.0.0"
   }
 }
