--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,6 +18,4 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "friday"
-      time: "09:00"
+      interval: "daily"
