Migrate to Vitest

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "crazy-dicey",
   "version": "1.0.0",
-  "description": "Example code to teach testing with Typescript/Jest",
+  "description": "Example code to teach testing with Typescript/Vitest",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "check": "tsc --noEmit --pretty",
     "lint": "eslint src/*.ts",
     "lintfix": "eslint src/*.ts --fix",
-    "test": "jest"
+    "test": "vitest run --coverage"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,11 @@
   },
   "homepage": "https://github.com/sgohlke/crazy-dicey#readme",
   "devDependencies": {
-    "@sgohlke/ts-base-dependencies": "1.1.0"
+    "@types/node": "20.11.5",
+    "@vitest/coverage-v8": "1.6.0",
+    "typescript": "5.4.5",
+    "typescript-eslint": "7.13.1",
+    "vite-tsconfig-paths": "4.3.2",
+    "vitest": "1.6.0"
   }
 }
