--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "check": "tsc --noEmit --pretty",
-    "lint": "eslint src/*.ts",
-    "lintfix": "eslint src/*.ts --fix",
+    "lint": "oxlint",
     "test": "vitest run --coverage"
   },
   "repository": {
@@ -21,11 +20,14 @@
   },
   "homepage": "https://github.com/sgohlke/crazy-dicey#readme",
   "devDependencies": {
-    "@types/node": "22.13.5",
-    "@vitest/coverage-v8": "3.0.6",
-    "typescript": "5.7.3",
-    "typescript-eslint": "8.24.1",
+    "@types/node": "22.13.9",
+    "@vitest/coverage-v8": "3.0.7",
+    "oxlint": "0.15.13",
+    "typescript": "5.8.2",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.0.6"
+    "vitest": "3.0.7"
+  },
+  "overrides": {
+      "esbuild": "0.25.0"
   }
 }
